--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "probot run"
   },
   "dependencies": {
+    "probot": "^3.0.0",
     "probot-app-label-release-pr": "^1.0.0",
     "probot-app-merge-pr": "^1.0.0",
     "probot-app-migrations": "^1.0.0",
